feat: apply new security
