# src/Applications/DTOs/Requests/Auth/LogoutRequestDTO.ts
@@ -2,5 +2,6 @@
 
 export class LogoutRequestDTO {
   userId: string = '';
-  refreshToken: string = ''
+  refreshToken: string = '';
+  token: string = '';
 }
